; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_capture.c_snd_line6_capture_hw_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_capture.c_snd_line6_capture_hw_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { i32 }
%struct.snd_line6_pcm = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*)* @snd_line6_capture_hw_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_line6_capture_hw_free(%struct.snd_pcm_substream* %0) #0 {
  %2 = alloca %struct.snd_pcm_substream*, align 8
  %3 = alloca %struct.snd_line6_pcm*, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %2, align 8
  %4 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %5 = call %struct.snd_line6_pcm* @snd_pcm_substream_chip(%struct.snd_pcm_substream* %4)
  store %struct.snd_line6_pcm* %5, %struct.snd_line6_pcm** %3, align 8
  %6 = load %struct.snd_line6_pcm*, %struct.snd_line6_pcm** %3, align 8
  %7 = call i32 @unlink_wait_clear_audio_in_urbs(%struct.snd_line6_pcm* %6)
  %8 = load %struct.snd_line6_pcm*, %struct.snd_line6_pcm** %3, align 8
  %9 = getelementptr inbounds %struct.snd_line6_pcm, %struct.snd_line6_pcm* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @kfree(i32* %10)
  %12 = load %struct.snd_line6_pcm*, %struct.snd_line6_pcm** %3, align 8
  %13 = getelementptr inbounds %struct.snd_line6_pcm, %struct.snd_line6_pcm* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  %14 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %15 = call i32 @snd_pcm_lib_free_pages(%struct.snd_pcm_substream* %14)
  ret i32 %15
}

declare dso_local %struct.snd_line6_pcm* @snd_pcm_substream_chip(%struct.snd_pcm_substream*) #1

declare dso_local i32 @unlink_wait_clear_audio_in_urbs(%struct.snd_line6_pcm*) #1

declare dso_local i32 @kfree(i32*) #1

declare dso_local i32 @snd_pcm_lib_free_pages(%struct.snd_pcm_substream*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
